--- a/src/components/Burger/BurgerControls/BurgerControl/BurgerControl.module.css
+++ b/src/components/Burger/BurgerControls/BurgerControl/BurgerControl.module.css
@@ -66,6 +66,7 @@
   color: #966909;
   font-family: inherit;
   font-size: 1.2em;
+  margin-top: 1rem;
   padding: 15px 30px;
   box-shadow: 2px 2px 2px #966909;
 }
