add header, navigation - both for mobile and desktop

--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -1,6 +1,12 @@
 .Burger {
   height: 400px;
-  margin: 0 auto;
+  margin: 72px auto 0;
   overflow-y: auto;
-  width: 500px;
+  width: 100%;
+}
+
+@media (min-width: 500px) {
+  .Burger {
+    width: 500px;
+  }
 }
