--- a/src/components/Navigation/Header/Header.module.css
+++ b/src/components/Navigation/Header/Header.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   height: 56px;
-  justify-content: flex-end;
+  justify-content: space-between;
   left: 0;
   position: fixed;
   padding: 0 20px;
@@ -27,12 +27,15 @@
   height: 80%;
 }
 
-@media (min-width: 500px) {
-  .Header {
-    justify-content: space-between;
-  }
+.ButtonToggler {
+}
 
+@media (min-width: 500px) {
   .Header nav {
     display: inherit;
+  }
+
+  .ButtonToggler {
+    display: none;
   }
 }
