--- a/src/custom.scss
+++ b/src/custom.scss
@@ -1,4 +1,4 @@
 $primary: brown;
 $link-hover-decoration: none;
 
-@import "~bootstrap/scss/bootstrap.scss";
+@import 'bootstrap/scss/bootstrap.scss';
